Find all system modules at runtime
Addresses #217